--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -2,11 +2,13 @@ dl {
     background: none repeat scroll 0 0 #FAFAFA;
     margin: 8px 0;
     padding: 0;
+    width:fit-content;
+    display: inline-grid;
 }
 
 dt {
     display: inline-block;
-    width: 170px;
+    width: fit-content;
 }
 
 dd {
@@ -42,4 +44,10 @@ body {
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
+}
+.delete{
+    color:red;
+}
+.fa-pencil{
+    color:#212529;
 }
