HW09 datatables ajax colored and create

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -6,6 +6,17 @@ tr[data-mealExcess="true"] {
     color: red;
 }
 
+.data-mealExcessY{
+    color:red;
+}
+
+.data-mealExcessN{
+    color:green;
+}
+.hiddenElement{
+    display: none;
+}
+
 .fa {
     cursor: pointer;
 }
